<resources>
    <string name="app_name">QEL</string>
    <string name="link1_text">ДЛЯ ВАС</string>
    <string name="link2_text">ПОПУЛЯРНОЕ</string>
    <string name="link3_text">ДРУЗЬЯ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_menu_text">Search...</string>
    <string name="link2_frag_text">Link2</string>
    <string name="first_fragment_welcometext">Добро\nпожаловать!</string>
    <string name="sec_frag_reg_text">Регистрация</string>
    <string name="sec_frag_skip_btn">ПРОПУСТИТЬ</string>
    <string name="sec_frag_main_phone_num_text"><font size="12">НОМЕР ТЕЛЕФОНА</font></string>
    <string name="sec_frag_name_hint"><font size="12">ИМЯ/ФАМИЛИЯ</font></string>
    <string name="sec_frag_mail_hint"><font size="12">EMAIL</font></string>
    <string name="sec_frag_sign_up_text">Зарегестрируйтесь, чтобы получить билеты</string>
    <string name="third_frag_request_code_hint"><font size="12">ВВЕДИТЕ КОД ПОДТВЕРЖДЕНИЯ</font></string>
    <string name="third_frag_resend_code_text">ОТПРАВИТЬ КОД ПОВТОРНО</string>
    <string name="third_fragment_accept_terms">Регистрируясь, вы автоматически\nсоглашаетесь с нашими <a href="https://www.google.kz/">Условиями использования</a> и \n<a href="https://www.google.kz/">Политика Конфиденциальности</a></string>
    <string name="fourth_frag_congrat">Поздравляем!</string>
    <string name="fourth_frag_congrat_full_text">Вы успешно зарегистрировались.\n Теперь вы можете начать пользоваться приложением.</string>
    <string name="profile_tickets_tab_txt">0\nБилеты</string>
    <string name="profile_saved_tickets_tab_text">0\nОтмеченные</string>
    <string name="profile_interests_tab_text">7\nИнтересы</string>
    <string name="cool_fragment_blank_tickets_txt">Классно!</string>
    <string name="fragment_blank_tickets_second_tv">У вас есть свободное время, мы можем\nпомочь вам найти мероприятия.</string>
    <string name="fragment_blank_tickets_show_events_tv">посмотреть мероприятия</string>
    <string name="cardview_ticket_event_name">Семинар по английскому языку</string>
    <string name="spinner_title">Выберите количество билетов</string>
    <string-array name="links">
        <item>Алматы</item>
        <item>Астана</item>
        <item>Актау</item>
        <item>Атырау</item>
    </string-array>
    <string-array name="themes">
        <item>Музыка</item>
        <item>Бизнес</item>
        <item>Еда и Напитки</item>
        <item>Сообщество</item>
        <item>Искусство</item>
        <item>Кино и Медиа</item>
        <item>Спорт и Фитнес</item>
        <item>Здоровье и Красота</item>
        <item>Наука и Техника</item>
        <item>Путешествие и Туры</item>
        <item>Семья</item>
        <item>Образование</item>
        <item>Правительство</item>
        <item>Религия</item>
        <item>Благотворительность</item>
        <item>Развлечение</item>
        <item>Обучение</item>
        <item>Юмор</item>
        <item>Мода и Стиль</item>
        <item>Активный отдых</item>
    </string-array>
</resources>
