<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_coord_layout1"
    tools:context=".MainActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AlertDialog.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways">
            
        </android.support.v7.widget.Toolbar>
        
        <android.support.design.widget.TableLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/link1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link1_text" />

            <android.support.design.widget.TabItem
                android:id="@+id/link2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link2_text" />

            <android.support.design.widget.TabItem
                android:id="@+id/link3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link3_text" />
        </android.support.design.widget.TableLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/circle_background"/>





</android.support.design.widget.CoordinatorLayout>