<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".BlankTicketsFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:layout_scrollFlags="scroll|enterAlways">

        <TextView
            android:id="@+id/cool_fragment_blank_tickets_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cool_fragment_blank_tickets_txt"
            android:textColor="#38000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/useless_fragment_blank_tickets_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/fragment_blank_tickets_second_tv"
            android:textAlignment="center"
            android:textColor="#60000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cool_fragment_blank_tickets_tv" />

        <TextView
            android:id="@+id/show_events_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:fontFamily="@font/roboto_bold"
            android:foreground="?attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/fragment_blank_tickets_show_events_tv"
            android:textAllCaps="true"
            android:textColor="@color/tab1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/useless_fragment_blank_tickets_tv" />
    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>