<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:fitsSystemWindows="true"
        android:stateListAnimator="@drawable/appbar_always_elevated"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <me.fahmisdk6.avatarview.AvatarView
                android:id="@+id/profile_avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginBottom="64dp"
                android:background="@drawable/profile_avatar_background"
                android:elevation="2dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_image"
                app:avBgTextColor="#9ca9de"
                app:avFont="fonts/Roboto-Bold.ttf"
                app:avTextColor="#546666a4"
                app:avTextSize="14sp"
                app:layout_collapseMode="pin"
                />

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="Нариман Дуйсеков"
                app:layout_collapseMode="pin"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                />

            <android.support.design.widget.TabLayout
                android:id="@+id/profile_tablayout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="bottom"
                android:background="@color/tab2"
                app:tabIndicatorHeight="4dp"
                app:tabSelectedTextColor="#5f6cba"
                app:tabTextAppearance="@style/CustomTabText"
                app:tabTextColor="#675f6cba">

                <android.support.design.widget.TabItem
                    android:id="@+id/tickets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_tickets_tab_txt" />

                <android.support.design.widget.TabItem
                    android:id="@+id/saved_tickets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_saved_tickets_tab_text" />

                <android.support.design.widget.TabItem
                    android:id="@+id/interests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_interests_tab_text" />

            </android.support.design.widget.TabLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/profile_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"></android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/profile_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    

</android.support.design.widget.CoordinatorLayout>

    <!--app:theme="@style/ToolbarColoredBackArrow"-->